--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myna Vu</title>
-    <link href="https://fonts.cdnfonts.com/css/nouveau-ibm" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.cdnfonts.com/css/flexi-ibm-vga-true" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/flexi-ibm-vga-false" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="logo.PNG" />
+    <link rel="icon" type="image/png" href="logo.PNG" />
 
 </head>
 <body>
