--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="logo.PNG" />
-
+    <link rel="icon" type="image/png" href="logo.png" />
 </head>
 <body>
 <header>
