added new project

--- a/index.html
+++ b/index.html
@@ -61,8 +61,16 @@
 </section>
 <hr>
 <section>
-    <h1 id="projects" class="centered yellow">Some of my latest works</h1>
+    <h1 id="projects" class="centered yellow">Some of my latest works <i class="fab fa-solid fa-arrow-right small"></i></h1>
     <div class="projectsContainer black">
+
+        <div class="project">
+            <img class="thumbnail" src="wordcloud_thumbnail.png">
+            <h3>Word Cloud for Messages</h3>
+            <h5>Visualizing user's word frequencies (word cloud) and overall quantity (pie chart) in Facebook/Instagram chats.</h5>
+            <a href="https://mynavu.github.io/Word-Cloud-for-Messages/" target="_blank"><i class="bi bi-globe small"></i></a>
+            <a href="https://github.com/mynavu/Word-Cloud-for-Messages" target="_blank"><i class="fab fa-github small"></i></a>
+        </div>
         <div class="project">
             <img class="thumbnail" src="vocabular_thumbnail.png">
             <h3>VOCABULAR</h3>
@@ -76,7 +84,6 @@
             <h5>An MVP for a social networking app designed for close friends and families to post on a shared globe using a geo-tagging algorithm.</h5>
             <a href="https://globit.netlify.app/" target="_blank"><i class="bi bi-globe small"></i></a>
             <a href="https://github.com/mynavu/Globit" target="_blank"><i class="fab fa-github small"></i></a>
-
         </div>
         <div id="contact" class="project">
             <img class="thumbnail" src="portfolio_thumbnail.png">
